Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: 'Welcome to the home of your new documentation'
+description: '-'
 ---
 
 <img
@@ -14,17 +14,16 @@ description: 'Welcome to the home of your new documentation'
   alt="Hero Dark"
 />
 
-## Setting up
+## Welcome to Crafty Cup Ownership Handbook
 
-The first step to world-class documentation is setting up your editing environments.
-
+Welcome to Crafty Cup Management Handbook! Congratulations on being a ownership member at Crafty Cup and we're really glad to have you in our team!
 <CardGroup cols={2}>
   <Card
-    title="Edit Your Docs"
+    title="Department Formats"
     icon="pen-to-square"
     href="https://mintlify.com/docs/quickstart"
   >
-    Get your docs set up locally for easy development
+Get all department formats such as QOTD format, termination format, etc.
   </Card>
   <Card
     title="Preview Changes"
