Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -13,6 +13,7 @@ description: '-'
   src="/images/hero-dark.svg"
   alt="Hero Dark"
 />
+<Warning>This page is not released yet to the public so bugs may occur.</Warning>
 
 ## Welcome to Crafty Cup Ownership Handbook
 
